--- a/Public/stylesheets/main.css
+++ b/Public/stylesheets/main.css
@@ -1,2 +1,154 @@
+/* Globals ----------------------------------------------------------------- */
+:root {
+  --dark-blue: #111930;
+  --mid-blue: #356FCE;
+  --light-blue: #BEDEFF;
+
+  --dark-green: #027353;
+  --mid-green: #038C33;
+  --light-green: #5FBF1B;
+
+  --yellow: #F2B94F;
+
+  --black: #2D2D2D;
+  --dark-grey: #5C5C5C;
+  --grey: #9A9A9A;
+  --light-grey: #EFEFEF;
+  --white: #FFFFFF;
+}
+
+/* Base styles ------------------------------------------------------------- */
+* {
+  box-sizing: border-box;
+}
+
+body {
+  color: var(--black);
+  background-color: var(--white);
+  font-family: "Open Sans", -apple-system, "BlinkMacSystemFont", "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  font-size: 16px;
+  line-height: 22px;
+}
+
+h1 {
+  margin: 0;
+  padding: 0;
+  font-size: 24px;
+  letter-spacing: -0.3px;
+}
+
+h2 {
+  font-size: 24px;
+  line-height: 27px;
+}
+
+h3 {
+  font-size: 20px;
+  line-height: 22px;
+}
+
+h4 {
+  font-size: 18px;
+  line-height: 20px;
+}
+
+a {
+  color: var(--mid-blue);
+  text-decoration: underline;
+}
+
+/* Overall layout ---------------------------------------------------------- */
+.inner {
+  margin: 0 auto;
+  padding: 20px 10px;
+  max-width: 800px;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+}
+
+nav ul li {
+  margin: 0 5px;
+  list-style: none;
+}
+
+nav ul li a {
+  padding: 3px;
+  color: var(--white);
+  font-size: 15px;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+nav ul li a:hover {
+  color: var(--yellow);
+}
+
+/* Header ------------------------------------------------------------------ */
+header {
+  color: var(--white);
+  background-color: var(--dark-blue);
+}
+
+header .inner {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+header a {
+  color: var(--white);
+  text-decoration: none;
+}
+
+header h1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+header h1 img {
+  margin-right: 10px;
+  max-width: 64px;
+}
+
+header nav ul li a {
+  border-bottom: 2px var(--light-blue) solid;
+}
+
+header nav ul li a:hover {
+  border-color: var(--yellow);
+}
+
+@media screen and (max-width: 767px) {
+  header .inner {
+    flex-direction: column;
+  }
+}
+
+/* Main content ------------------------------------------------------------ */
 
 
+/* Footer ------------------------------------------------------------------ */
+footer {
+  color: var(--white);
+  background-color: var(--dark-blue);
+}
+
+footer .inner {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+@media screen and (max-width: 767px) {
+  footer .inner nav ul {
+    flex-direction: column;
+    align-items: center;
+  }
+}
