--- a/Public/stylesheets/main.css
+++ b/Public/stylesheets/main.css
@@ -158,6 +158,7 @@ header nav ul li a:hover {
 
 /* Main content ------------------------------------------------------------ */
 .license {
+  margin: 5px 0;
   padding: 5px 10px 5px 28px;
   background-color: var(--light-green);
   background-image: url('/images/osi.svg');
