Responsive tweak for the header.

--- a/Public/stylesheets/main.css
+++ b/Public/stylesheets/main.css
@@ -154,6 +154,10 @@ header nav ul li a:hover {
   header .inner {
     flex-direction: column;
   }
+
+  header h1 {
+    margin-bottom: 20px;
+  }
 }
 
 /* Main content ------------------------------------------------------------ */
