--- a/Public/stylesheets/main.css
+++ b/Public/stylesheets/main.css
@@ -194,6 +194,10 @@ p.description {
   }
 }
 
+.metadata {
+  margin: 50px 0;
+}
+
 /* Footer ------------------------------------------------------------------ */
 footer {
   color: var(--white);
