--- a/Public/stylesheets/main.css
+++ b/Public/stylesheets/main.css
@@ -80,6 +80,48 @@ hr.short {
   height: 1px;
 }
 
+/* Icon font --------------------------------------------------------------- */
+@font-face {
+  font-family: 'icomoon';
+  src: url('/fonts/icomoon.eot?os9rj2');
+  src: url('/fonts/icomoon.eot?os9rj2#iefix') format('embedded-opentype'),
+    url('/fonts/icomoon.ttf?os9rj2') format('truetype'),
+    url('/fonts/icomoon.woff?os9rj2') format('woff'),
+    url('/fonts/icomoon.svg?os9rj2#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+i.icon,
+li.icon:before {
+  color: var(--black);
+  font-family: "icomoon" !important;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  vertical-align: middle;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  speak: none;
+}
+
+i.icon {
+  font-size: 22px;
+}
+
+li.icon {
+  list-style: none;
+}
+
+li.icon:before {
+  margin-left: -35px;
+  margin-right: 15px;
+  font-size: 20px;
+}
+
 /* Overall layout ---------------------------------------------------------- */
 .inner {
   margin: 0 auto;
@@ -208,6 +250,17 @@ p.description {
 
 .metadata {
 }
+i.osi:before { content: "\e900"; color: var(--white); }
+li.authors:before { content: "\e902"; }
+li.author:before { content: "\e901"; }
+li.history:before { content: "\e903" }
+li.activity:before { content: "\e904"; }
+li.products:before { content: "\e905"; }
+li.stable:before { content: "\e906"; color: var(--light-green); }
+li.beta:before { content: "\e907"; color: var(--mid-green); }
+li.branch:before { content: "\e908"; color: var(--dark-green); }
+li.language:before { content: "\e909"; }
+li.platforms:before { content: "\e90a"; }
 
 /* Footer ------------------------------------------------------------------ */
 footer {
