Tweaked the dark grey.

--- a/Public/stylesheets/main.css
+++ b/Public/stylesheets/main.css
@@ -11,7 +11,7 @@
   --yellow: #F2B94F;
 
   --black: #2D2D2D;
-  --dark-grey: #5C5C5C;
+  --dark-grey: #3E3E3E;
   --grey: #9A9A9A;
   --light-grey: #EFEFEF;
   --white: #FFFFFF;
