Adjusted the light grey.

--- a/Public/stylesheets/main.css
+++ b/Public/stylesheets/main.css
@@ -13,7 +13,7 @@
   --black: #2D2D2D;
   --dark-grey: #3E3E3E;
   --grey: #9A9A9A;
-  --light-grey: #EFEFEF;
+  --light-grey: #DADADA;
   --white: #FFFFFF;
 }
 
