--- a/Public/stylesheets/main.css
+++ b/Public/stylesheets/main.css
@@ -314,11 +314,61 @@ header nav ul li a:hover {
 
 #results {
   position: absolute;
-  padding: 10px;
   width: 100%;
+  max-height: 500px;
+  overflow: scroll;
   background-color: var(--white);
   border-top: 2px var(--light-blue) solid;
+  box-shadow: 0px 3px 8px 2px rgba(100, 100, 100, 0.2);
   z-index: 9999;
+}
+
+#results ul {
+  margin: 0;
+  padding: 0;
+}
+
+#results li {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px var(--light-grey) solid;
+}
+
+#results li:last-child {
+  border: none;
+}
+
+#results div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+#results h4 {
+  display: inline;
+  margin: 0;
+  padding: 0;
+  font-size: 17px;
+  color: var(--black);
+}
+
+#results small {
+  font-size: 10px;
+  color: var(--mid-blue);
+}
+
+#results p {
+  margin: 5px 0 0 0;
+  font-size: 14px;
+  color: var(--black);
+}
+
+#results .no_results {
+  padding: 40px;
+  text-align: center;
+  color: var(--dark-grey);
 }
 
 /* Package page ------------------------------------------------------------ */
