--- a/Public/stylesheets/main.css
+++ b/Public/stylesheets/main.css
@@ -289,16 +289,17 @@ header nav ul li a:hover {
   max-width: 500px;
 }
 
-.search input {
+.search textarea {
   padding: 12px;
   width: 100%;
   font-size: 25px;
   font-weight: 600;
   border: none;
   color: var(--black);
+  resize: none;
 }
 
-.search input:focus {
+.search textarea:focus {
   outline: none;
 }
 
@@ -320,6 +321,7 @@ header nav ul li a:hover {
 /* Search results ---------------------------------------------------------- */
 
 #results {
+  margin-top: -4px;
   position: absolute;
   width: 100%;
   max-height: 500px;
