--- a/Public/stylesheets/main.css
+++ b/Public/stylesheets/main.css
@@ -498,6 +498,25 @@ span.branch {
   color: var(--dark-green);
 }
 
+/* Error page -------------------------------------------------------------- */
+div.error {
+  padding: 100px 0;
+  text-align: center;
+}
+
+div.error h4 {
+  margin: 20px 0 10px 0;
+}
+
+div.error p {
+  margin: 0;
+}
+
+div.error i {
+  font-size: 35px;
+  color: var(--mid-red);
+}
+
 /* Footer ------------------------------------------------------------------ */
 
 footer {
