--- a/Public/stylesheets/main.css
+++ b/Public/stylesheets/main.css
@@ -76,6 +76,17 @@ small {
   font-size: 11px;
 }
 
+img {
+  max-width: 100%;
+}
+
+pre {
+  border: 1px var(--grey) solid;
+  background-color: var(--very-light-grey);
+  border-radius: 4px;
+  padding: 15px;
+}
+
 hr {
   margin: 5px 0;
   border: 0;
