--- a/Public/stylesheets/main.css
+++ b/Public/stylesheets/main.css
@@ -451,11 +451,11 @@ header nav ul li a:hover {
 
 /* Markdown pages ---------------------------------------------------------- */
 
-.markdown img {
+.markdown main img {
+  margin: 20px auto;
   display: block;
-  box-shadow: 0px 3px 8px 2px rgba(100, 100, 100, 0.2);
-  margin: 0 auto;
   max-width: 90%;
+  box-shadow: 0px 3px 8px 2px rgba(100, 100, 100, 0.2);
 }
 
 /* Package page ------------------------------------------------------------ */
